--- a/src/Input/Input.scss
+++ b/src/Input/Input.scss
@@ -11,10 +11,6 @@
     font-size: 12px;
   }
 
-  &.-link-right input {
-    padding: 0 62px 0 18px;
-  }
-
   &.-error input, 
   &.-error .select-box, 
   &.-error textarea {
